#mant0000084: [EFF-003] Ajout joueur : nationalité non reportée dans la card

--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -1,7 +1,7 @@
 <div class="container">
-<!-- body start-->
+    <!-- body start-->
     <div class="row"></div>
-    
+
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
@@ -12,7 +12,7 @@
                 <div class="col m7 s12">
                     <br/>
                     <h4>{{player.firstname}} {{player.name}}</h4>
-                    <h6>{{player.positionType}}</h6>
+                    <h6 ng-bind="player.positionType"></h6>
                 </div>
                 <div class="col m2 s12">
                     <br/>
@@ -30,85 +30,108 @@
                 <div class="center-align blue-grey-text text-darken-2">
                     <div class="row">
                         <div class="col m4 s12">
-                            <div class="left-align"><h5>{{'playerLabels.playerCivilSection' | translate }}</h5></div>
+                            <div class="left-align"><h5 translate="playerLabels.playerCivilSection"></h5></div>
                             <div class="divider red lighten-1"></div>
                             <div>&nbsp;</div>
                             <div class="left-align">{{player.age}} {{'commons.format.ageYear' | translate }}</div>
                             <div>&nbsp;</div>
-                            <div class="left-align" ng-if="player.nationality">{{'playerLabels.playerNationality' | translate }} : {{player.nationality.label}}</div>
+                            <div class="left-align" ng-if="player.nationality">{{'playerLabels.playerNationality' |
+                                translate }} : {{player.nationality}}
+                            </div>
                             <div>&nbsp;</div>
-                            <div class="left-align" ng-if="player.birthCity">{{'playerLabels.playerBirthCity' | translate }} : {{player.birthCity}}</div>
+                            <div class="left-align" ng-if="player.birthCity">{{'playerLabels.playerBirthCity' |
+                                translate }} : {{player.birthCity}}
+                            </div>
                             <div>&nbsp;</div>
                             <div class="left-align" ng-if="mapShow">
-                                <a class="waves-effect waves-light modal-trigger red-text text-lighten-1" ng-click="openMap()">
+                                <a class="waves-effect waves-light modal-trigger red-text text-lighten-1"
+                                   ng-click="openMap()">
                                     <i class="material-icons">location_on</i> {{player.address.formatedAddress}}
                                 </a>
                             </div>
-                            <div ng-if="mapShow">&nbsp;</div>    
+                            <div ng-if="mapShow">&nbsp;</div>
                         </div>
                         <div class="col m4 s12 grey lighten-4">
-                            <div class="left-align"><h5>{{'playerLabels.playerCaracterSection' | translate }}</h5></div>
-                            <div class="divider red lighten-1"></div> 
+                            <div class="left-align"><h5 translate="playerLabels.playerCaracterSection"></h5></div>
+                            <div class="divider red lighten-1"></div>
                             <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerWeight' | translate }} : {{player.status.weight}}</div>
+                            <div class="left-align">{{'playerLabels.playerWeight' | translate }} :
+                                {{player.status.weight}}
+                            </div>
                             <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerHeight' | translate }} : {{player.status.height}}</div>
+                            <div class="left-align">{{'playerLabels.playerHeight' | translate }} :
+                                {{player.status.height}}
+                            </div>
                             <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerLaterality' | translate }} : {{player.status.laterality}}</div>
+                            <div class="left-align">{{'playerLabels.playerLaterality' | translate }} :
+                                {{player.status.laterality}}
+                            </div>
                             <div>&nbsp;</div>
-                            <div class="left-align">{{'playerLabels.playerPositionType' | translate }} : {{player.positionType}}</div>
+                            <div class="left-align">{{'playerLabels.playerPositionType' | translate }} :
+                                {{player.positionType}}
+                            </div>
                             <div>&nbsp;</div>
                         </div>
                         <div class="col m4 s12">
-                            <div class="center-align"><h5>{{'playerLabels.playerContactSection' | translate }}</h5></div>
+                            <div class="center-align"><h5 translate="playerLabels.playerContactSection"></h5></div>
                             <div class="divider red lighten-1"></div>
                             <div>&nbsp;</div>
                             <div class="left-align"><i class="material-icons">phone</i> {{player.contact.home}}</div>
                             <div>&nbsp;</div>
-                            <div class="left-align"><i class="material-icons">smartphone</i> {{player.contact.cellphone}}</div>
+                            <div class="left-align"><i class="material-icons">smartphone</i>
+                                {{player.contact.cellphone}}
+                            </div>
                             <div>&nbsp;</div>
-                            <div class="left-align"><a href="mailto:{{player.contact.email}}" class="red-text text-lighten-1"><i class="material-icons">mail</i> {{player.contact.email}}</a></div>
+                            <div class="left-align"><a href="mailto:{{player.contact.email}}"
+                                                       class="red-text text-lighten-1"><i
+                                    class="material-icons">mail</i> {{player.contact.email}}</a></div>
                             <div>&nbsp;</div>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="row colorMain">
                     <div class="col s4 center-align">
                         <a href="" ng-click="doTheBack()">
-                            <i class="white-text material-icons small tooltipped"  
-                               data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.returnViewPlayer' | translate }}">undo</i>
+                            <i class="white-text material-icons small tooltipped"
+                               data-position="top" data-delay="20"
+                               data-tooltip="{{'viewPlayer.buttons.returnViewPlayer' | translate }}">undo</i>
                         </a>
                     </div>
                     <div class="col s4 center-align">
                         <a href="#/private/updatePlayer/{{player._id}}">
-                            <i class="white-text material-icons small tooltipped" 
-                            data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.updatePlayer' | translate }}">mode_edit</i>
+                            <i class="white-text material-icons small tooltipped"
+                               data-position="top" data-delay="20"
+                               data-tooltip="{{'viewPlayer.buttons.updatePlayer' | translate }}">mode_edit</i>
                         </a>
                     </div>
                     <div class="col s4 center-align">
                         <a href="#/private/playerStats/{{player._id}}">
-                            <i class="white-text small fa fa-bar-chart tooltipped" 
-                            data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
+                            <i class="white-text small fa fa-bar-chart tooltipped"
+                               data-position="top" data-delay="20"
+                               data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
-<!-- body end-->
+
+    <!-- body end-->
 </div>
 
 <!-- Modal map Player -->
-  <div id="mapPlayer" class="modal modal-fixed-footer">
+<div id="mapPlayer" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i> {{player.address.formatedAddress}}</div>
+        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i>
+            {{player.address.formatedAddress}}
+        </div>
         <br>
         <div id="ngMapPlayer" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer">
-      <a href="#/private/viewPlayer/{{player._id}}" class="modal-action modal-close waves-effect waves-red btn btn-s colorAccent"
-                   translate="commons.buttons.close"></a>
+        <a href="#/private/viewPlayer/{{player._id}}"
+           class="modal-action modal-close waves-effect waves-red btn btn-s colorAccent"
+           translate="commons.buttons.close"></a>
     </div>
-  </div>
+</div>
