--- a/src/app/index.css
+++ b/src/app/index.css
@@ -115,7 +115,7 @@
 }
 
 .card .card-content, .card .card-title {
-    border-radius: 8px 8px 0px 0px;
+    border-radius: 8px 8px 0 0;
 }
 
 .btn, .btn-large, .btn-flat {
@@ -229,7 +229,7 @@ input.ng-pristine, input.ng-pristine + label {
     color: #646464;
     opacity: 1;
 }
->>>>>>> QSwarm-Web/master
+
 [type="radio"].with-gap:checked + label:after {
     border: 2px solid #546e7a;
     background-color: #546e7a;
@@ -335,18 +335,6 @@ footer.page-footer {
 .nv-file-drop {
     border: dotted 3px green;
 }
-
-/*
-canvas {
-    background-color: #f3f3f3;
-    -webkit-box-shadow: 3px 3px 3px 0 #e3e3e3;
-    -moz-box-shadow: 3px 3px 3px 0 #e3e3e3;
-    box-shadow: 3px 3px 3px 0 #e3e3e3;
-    border: 1px solid #c3c3c3;
-    height: 100px;
-    margin: 6px 0 0 6px;
-}
-*/
 /* Custom style for angular-selection-model */
 /* Selection Model Styles */
 ul.fancy {
@@ -383,7 +371,6 @@ table.super-fancy tr.foobar {
 .banner-container {
     background: linear-gradient(to bottom, #f2f5f6 0, #ede3e3 46%, #ddd 100%);
     color: #666;
-    font-family: Arial;
     text-align: center;
 }
 
@@ -392,7 +379,7 @@ table.super-fancy tr.foobar {
 }
 
 .banner-container div.row div.col {
-    margin: 0px;
+    margin: 0;
 }
 
 .banner-close {
@@ -440,7 +427,7 @@ table.super-fancy tr.foobar {
 
 /** responsive RECAPTCHA*/
 #custom_recaptcha_widget .col {
-    padding: 0px;
+    padding: 0;
 }
 
 #custom_recaptcha_widget img#recaptcha_challenge_image,
@@ -796,7 +783,7 @@ table.super-fancy tr.foobar {
 }
 
 .widget-content {
-    margin: O;
+    margin: 0;
     padding: 5px;
     width: 100%;
 }
