--- a/src/app/index.css
+++ b/src/app/index.css
@@ -77,8 +77,8 @@
     background: url("../assets/images/handball/Home2.jpg") center 60%;
     max-height: 100vh;
     width: 100%;
-    height: 600px;
-    padding: 10vh 10vw 10vh 10vw;
+    height: 100vh;
+    padding: 5vh 10vw 10vh 10vw;
     text-align: center;
     position: relative;
 }
@@ -95,7 +95,7 @@
 }
 
 .landing div{
-    margin-bottom: 20px;
+    margin-bottom: 5vh;
 }
 
 .aboutUs {
@@ -229,7 +229,7 @@ input.ng-pristine, input.ng-pristine + label {
     color: #646464;
     opacity: 1;
 }
->>>>>>> QSwarm-Web/master
+
 [type="radio"].with-gap:checked + label:after {
     border: 2px solid #546e7a;
     background-color: #546e7a;
