--- a/src/app/index.css
+++ b/src/app/index.css
@@ -31,36 +31,44 @@
 
 /* Theme Color : deep-purple/red */
 
-.dark-primary-color    { 
+.dark-primary-color {
     background: #37474F !important;
     color: #FFFFFF;
 }
-.default-primary-color { 
+
+.default-primary-color {
     background: #78BE78;
     color: #FFFFFF;
 }
-.light-primary-color   { 
+
+.light-primary-color {
     background-color: rgba(242, 243, 242, 1) !important;
     color: #646464 !important;
 }
-.accent-color          { 
+
+.accent-color {
     background: #ea5350 !important;
     color: #FFFFFF;
 }
-.secondary-color          { 
+
+.secondary-color {
     background: rgba(120, 190, 120, 1) !important;
     color: #FFFFFF;
 }
-.primary-text-color    { 
+
+.primary-text-color {
     color: rgba(69, 90, 100, 1);
 }
-.secondary-text-color  { 
-    color: #BDBDBD !important;; 
+
+.secondary-text-color {
+    color: #BDBDBD !important;;
 }
-.accent-text-color         { 
+
+.accent-text-color {
     color: #ea5350 !important;
 }
-.divider-color         { 
+
+.divider-color {
     border-color: #BDBDBD !important;
 }
 
@@ -94,18 +102,31 @@
     background-color: #ffffff;
 }
 
-.landing div{
+.landing div {
     margin-bottom: 20px;
 }
 
-.aboutUs {
-    background: url("../assets/images/handball/Back01.jpg") center 80%;
-    max-height: 100vh;
-    width: 100%;
-    height: 400px;
-    padding: 10vh 10vw 10vh 10vw;
+.aboutUs .about-bg{
+    max-height: 100%;
+    height:100%;
+    width:100%;
     text-align: center;
-    position: relative;
+    background: url("../assets/images/backAbout.jpg") fixed;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+}
+.aboutUs .about-container {
+    width: 80%;
+    background-color: transparent;
+    position:relative;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 80px;
 }
 
 /* Override Materializecss */
@@ -186,6 +207,7 @@ input {
     padding-left: 5px !important;
     padding-right: -5px !important;
 }
+
 input.has-error {
     border-bottom-color: #ea5350 !important;
     color: #ea5350;
@@ -225,6 +247,7 @@ input.ng-invalid, input.ng-invalid + label {
     color: #F44336;
     opacity: 1;
 }
+
 input.ng-pristine, input.ng-pristine + label {
     color: #646464;
     opacity: 1;
@@ -290,11 +313,14 @@ span.badge {
     position: relative;
 }
 
-
 footer.page-footer {
     margin: 0;
+    position: absolute;
+    width: 100%;
 }
-
+main {
+    margin-bottom: -20px;
+}
 .visible-nav {
     z-index: 30 !important;
     position: relative;
@@ -308,8 +334,7 @@ footer.page-footer {
     opacity: 0;
 }
 
-
-/* Toast */ 
+/* Toast */
 .toast-message {
     line-height: normal;
     font-size: 1em;
@@ -321,7 +346,6 @@ footer.page-footer {
     display: block;
     height: auto;
 }
-
 
 /* Custom style for angular-file-uploader */
 .my-drop-zone {
@@ -335,6 +359,7 @@ footer.page-footer {
 .nv-file-drop {
     border: dotted 3px green;
 }
+
 /* Custom style for angular-selection-model */
 /* Selection Model Styles */
 ul.fancy {
@@ -1013,4 +1038,42 @@ table.super-fancy tr.foobar {
 
 .cnil-main p {
     text-align: justify;
+}
+
+.card-image {
+    height: 200px;
+    filter: grayscale(100%);
+    border-top-left-radius: 12px !important;
+    border-top-right-radius: 12px !important;
+}
+
+.card-reveal img {
+    height: 150px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    margin-left: auto;
+    margin-right: auto;
+    filter: grayscale(100%);
+}
+
+.card-reveal p {
+    text-align: left;
+}
+
+.close-card {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.aboutUs .card-content {
+    min-height: 170px
+}
+
+.aboutUs .card {
+    border-radius: 8px;
+}
+.aboutUs .card-transluscent {
+    background-color: rgba(255,255,255,0.8);
+    padding: 20px;
+    margin: 23px;
 }
