--- a/src/app/modules/public/aboutUs.html
+++ b/src/app/modules/public/aboutUs.html
@@ -1,115 +1,175 @@
 <div class="primary-text-color">
-    <div class="row default-primary-color aboutUs">
-        <div class="col s12 center-align"> 
-            <h2 translate="landing.contact.about"></h2>
-        </div>
-        <div class="col s12">&nbsp;</div>
-        <div class="col s12">
+    <div class="row aboutUs">
+        <div class="col s12 parallax-container about-bg"></div>
+        <div class="about-container">
+            <h2 class="white-text center-align" translate="landing.contact.about"></h2>
+            <div class="card card-transluscent">
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col m2 hide-on-small-and-down">
+                            <img src="../../../assets/images/qaobee-logoRouge.png" class="responsive-img">
+                        </div>
+                        <div class="col m10 s12">
 
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/Christophe.jpg">
-                        <span class="card-title center-align"><h3>Christophe</h3></span>
-                    </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>Le préparateur physique</h5>
-                        <h6>Bon les gars, aujourd'hui on y vas cool...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                            <h5>Notre philosophie :</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                                euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit amet, consectetuer
+                                adipiscing elit,
+                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna. Lorem ipsum dolor sit
+                                amet,
+                                consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                                magna.
+                            </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
+            <div class="col s12">
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/Christophe.jpg">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Christophe</h4>
+                            <h5>Le préparateur physique</h5>
+                            <h6>Bon les gars, aujourd'hui on y vas cool...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/Christophe.jpg">
+                            <span class="card-title">Christophe Kervella | CEO <i
+                                    class="material-icons right close-card">close</i></span>
 
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/Pascal.JPG">
-                        <span class="card-title center-align"><h3>Pascal</h3></span>
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:christophe.kervella@qaobee.com" target="_blank">christophe.kervella@qaobee.com</a>
+                            </p>
+                            <p><i class="fa fa-twitter-square fa-fw" aria-hidden="true"></i>
+                                <a href="https://twitter.com/ChrisKrvla" target="_blank">@ChrisKrvla</a></p>
+                        </div>
                     </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>Le coach</h5>
-                        <h6>les gars, mise au vert ce week end...</h6>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/Pascal.JPG">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Pascal</h4>
+                            <h5>Le coach</h5>
+                            <h6>les gars, mise au vert ce week end...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/Pascal.JPG">
+                            <span class="card-title">Pascal Pelerin | CEO <i
+                                    class="material-icons right close-card">close</i></span>
+
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:pascal.pelerin@qaobee.com" target="_blank">pascal.pelerin@qaobee.com</a>
+                            </p>
+                            <p><i class="fa fa-twitter-square fa-fw" aria-hidden="true"></i>
+                                <a href="https://twitter.com/PPdata9729" target="_blank">@PPdata9729</a></p>
+                        </div>
                     </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/mathieu.jpg">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Mathieu</h4>
+                            <h5>Le chargé de presse</h5>
+                            <h6>Pas de commentaires, question suivante...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/mathieu.jpg">
+                            <span class="card-title">Mathieu Garzuel | CMO <i
+                                    class="material-icons right close-card">close</i></span>
+
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:mathieu.garzuel@qaobee.com"
+                                   target="_blank">mathieu.garzuel@qaobee.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/Xavier.jpg">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Xavier</h4>
+                            <h5>L'analyste technique</h5>
+                            <h6>Il est à 100% au tir quand y'a pas de gardien...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/Xavier.jpg">
+                            <span class="card-title">Xavier Marin | CTO <i
+                                    class="material-icons right close-card">close</i></span>
+
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:xavier.marin@qaobee.com" target="_blank">xavier.marin@qaobee.com</a>
+                            </p>
+                            <p><i class="fa fa-twitter-square fa-fw" aria-hidden="true"></i>
+                                <a href="https://twitter.com/XavMarin" target="_blank">@XavMarin</a></p>
+                            <p><i class="fa fa-github-square fa-fw" aria-hidden="true"></i>
+                                <a href="https://github.com/Giwi" target="_blank">Giwi</a></p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/florent.jpg">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Florent</h4>
+                            <h5>Le tacticien</h5>
+                            <h6>L'enclenchement A23 dans les 5 dernières minutes...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/florent.jpg">
+                            <span class="card-title">Florent Isoard | CPIO <i
+                                    class="material-icons right close-card">close</i></span>
+
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:florent.isoard@qaobee.com" target="_blank">florent.isoard@qaobee.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 m4">
+                    <div class="card light-primary-color">
+                        <div class="card-image waves-effect waves-block waves-light center-align">
+                            <img class="activator" src="../../../assets/images/Jerome.JPG">
+                        </div>
+                        <div class="card-content about-card accent-color center-align">
+                            <h4 class="center-align activator">Jérôme</h4>
+                            <h5>Le préparateur mental</h5>
+                            <h6>Allez les gars, on leur marche sur la tête...</h6>
+                        </div>
+                        <div class="card-reveal">
+                            <img src="../../../assets/images/Jerome.JPG">
+                            <span class="card-title">Jérôme Roué | CDO <i
+                                    class="material-icons right close-card">close</i></span>
+
+                            <p><i class="fa fa-envelope-square fa-fw" aria-hidden="true"></i>
+                                <a href="mailto:jerome.roue@qaobee.com" target="_blank">jerome.roue@qaobee.com</a>
+                            </p>
+                            <p><i class="fa fa-twitter-square fa-fw" aria-hidden="true"></i>
+                                <a href="https://twitter.com/RoueJerome" target="_blank">@RoueJerome</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
-            
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/mathieu.jpg">
-                        <span class="card-title center-align"><h3>Mathieu</h3></span>
-                    </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>Le chargé de presse</h5>
-                        <h6>Pas de commentaires, question suivante...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/Xavier.jpg">
-                        <span class="card-title center-align"><h3>Xavier</h3></span>
-                    </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>L'analyste technique</h5>
-                        <h6>Il est à 100% au tir quand y'a pas de gardien...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/404-bg.jpg">
-                        <span class="card-title center-align"><h3>Florent</h3></span>
-                    </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>Le tacticien</h5>
-                        <h6>L'enclenchement A23 dans les 5 dernières minutes...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-
-             
-
-            <div class="col s12 m4">
-                <div class="card light-primary-color">
-                    <div class="waves-effect waves-block waves-light center-align">
-                        <img class="activator circle responsive-img" src="../../../assets/images/Jerome%20-%20copie.jpg">
-                        <span class="card-title center-align"><h3>Jérôme</h3></span>
-                    </div>
-                    <div class="card-content accent-color center-align">
-                        <h5>Le préparateur mental</h5>
-                        <h6>Allez les gars, on leur marche sur la tête...</h6>
-                    </div>
-                    <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
